Create "flattened" DDP experiment

--- a/experiments/CMakeLists.txt
+++ b/experiments/CMakeLists.txt
@@ -1,4 +1,5 @@
-set(${PROJECT_NAME}_EXPERIMENT ddp_separated_memory pure_eigen_openmp)
+set(${PROJECT_NAME}_EXPERIMENT ddp_separated_memory flattened_ddp
+                               pure_eigen_openmp)
 
 foreach(EXPERIMENT_NAME ${${PROJECT_NAME}_EXPERIMENT})
   add_subdirectory(${EXPERIMENT_NAME})
