--- a/experiments/pure_eigen_openmp/CMakeLists.txt
+++ b/experiments/pure_eigen_openmp/CMakeLists.txt
@@ -1,5 +1,7 @@
-set(BENCHMARK_NAME pure_eigen_openmp)
+set(${PROJECT_NAME}_EXPERIMENT pure_eigen_openmp pure_eigen_openmp_pointers)
 
-add_executable(${BENCHMARK_NAME} src/pure_eigen_openmp.cpp)
-target_include_directories(${BENCHMARK_NAME} PRIVATE "include")
-target_link_libraries(${BENCHMARK_NAME} crocoddyl::crocoddyl)
+foreach(EXPERIMENT_NAME ${${PROJECT_NAME}_EXPERIMENT})
+  add_executable(${EXPERIMENT_NAME} src/${EXPERIMENT_NAME}.cpp)
+  target_include_directories(${EXPERIMENT_NAME} PRIVATE "include")
+  target_link_libraries(${EXPERIMENT_NAME} crocoddyl::crocoddyl)
+endforeach(EXPERIMENT_NAME ${${PROJECT_NAME}_EXPERIMENT})
