Remove crocoddyl dependencies from simple test

--- a/experiments/pure_eigen_openmp/CMakeLists.txt
+++ b/experiments/pure_eigen_openmp/CMakeLists.txt
@@ -3,5 +3,5 @@ set(${PROJECT_NAME}_EXPERIMENT pure_eigen_openmp pure_eigen_openmp_pointers)
 foreach(EXPERIMENT_NAME ${${PROJECT_NAME}_EXPERIMENT})
   add_executable(${EXPERIMENT_NAME} src/${EXPERIMENT_NAME}.cpp)
   target_include_directories(${EXPERIMENT_NAME} PRIVATE "include")
-  target_link_libraries(${EXPERIMENT_NAME} crocoddyl::crocoddyl)
+  target_link_libraries(${EXPERIMENT_NAME} Eigen3::Eigen)
 endforeach(EXPERIMENT_NAME ${${PROJECT_NAME}_EXPERIMENT})
