Speed up compilateion | Enable Clang and ICPX

--- a/experiments/flattened_ddp/CMakeLists.txt
+++ b/experiments/flattened_ddp/CMakeLists.txt
@@ -3,4 +3,4 @@ set(BENCHMARK_NAME flattened_ddp_test)
 add_executable(${BENCHMARK_NAME} src/flattened_ddp_test.cpp src/ddp.cpp)
 target_include_directories(${BENCHMARK_NAME} PRIVATE "include")
 target_link_libraries(${BENCHMARK_NAME} example-robot-data::example-robot-data
-                      crocoddyl::crocoddyl)
+                      crocoddyl::crocoddyl stdc++)
